--- a/leetCode.html
+++ b/leetCode.html
@@ -332,8 +332,11 @@
         };
 
 
-        assertCompare(() => countNodes(makeTree([])), 0);
-        assertCompare(() => countNodes(makeTree([1, 2, 3, 4, 5, 6])), 6);
+        // assertCompare(() => countNodes(makeTree([])), 0);
+        // assertCompare(() => countNodes(makeTree([1, 2, 3, 4, 5, 6])), 6);
 
     </script>
+    <script src="./jest.shim.js"></script>
+    <script src="basic.js" type="module"></script>
+    <script src="index.test.js" type="module"></script>
 </body>
